...
            "value" : "رجوع"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "返回"
...
            "state" : "translated",
            "value" : "用戶端與伺服器版本不一致，暫時無法修改聯絡人。"
          }
        }
      }
    },
    "demo.imessage.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "دردشة بنمط iMessage"
...
            "value" : "Link"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "链接"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "連結"
...
            "value" : "Perfect — see you soon!"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "好呀，一会儿见！"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "好呀，待會見！"
...
