...
        panGesture.delegate = self
        addGestureRecognizer(panGesture)
        tapGesture.require(toFail: panGesture)
        addGestureRecognizer(tapGesture)
        isAccessibilityElement = true
        accessibilityTraits = [.image, .button, .adjustable]
        accessibilityIdentifier = "imessage.media.message"
    }

    /// 不支持从归档创建 `MediaMessageView`。
    ///
    /// 请使用代码初始化方法创建此对象。
    required init?(coder: NSCoder) {
...
